doc/2.2/_sources/reference/generated/ak.forms.ListForm.rst.txt
ak.forms.ListForm
-----------------

.. py:module: ak.forms.ListForm

Defined in `awkward.forms.listform <https://github.com/scikit-hep/awkward-1.0/blob/1b1211e8856ad177e4c584195af765febd21974a/src/awkward/forms/listform.py>`__ on `line 10 <https://github.com/scikit-hep/awkward-1.0/blob/1b1211e8856ad177e4c584195af765febd21974a/src/awkward/forms/listform.py#L10>`__.

.. py:class:: ak.forms.ListForm(self, starts, stops, content, *, parameters=None, form_key=None)



.. _ak-forms-listform-is_list:

.. py:attribute:: ak.forms.ListForm.is_list
    :value: True



.. _ak-forms-listform-starts:

.. py:attribute:: ak.forms.ListForm.starts



.. _ak-forms-listform-stops:

.. py:attribute:: ak.forms.ListForm.stops



.. _ak-forms-listform-content:

.. py:attribute:: ak.forms.ListForm.content



.. _ak-forms-listform-copy:

.. py:method:: ak.forms.ListForm.copy(self, starts=UNSET, stops=UNSET, content=UNSET, *, parameters=UNSET, form_key=UNSET)



.. _ak-forms-listform-simplified:

.. py:method:: ak.forms.ListForm.simplified(cls, starts, stops, content, *, parameters=None, form_key=None)



.. _ak-forms-listform-__repr__:

.. py:method:: ak.forms.ListForm.__repr__(self)



.. _ak-forms-listform-_to_dict_part:

.. py:method:: ak.forms.ListForm._to_dict_part(self, verbose, toplevel)



.. _ak-forms-listform-type:

.. py:attribute:: ak.forms.ListForm.type



.. _ak-forms-listform-__eq__:

.. py:method:: ak.forms.ListForm.__eq__(self, other)



.. _ak-forms-listform-purelist_parameter:

.. py:method:: ak.forms.ListForm.purelist_parameter(self, key)



.. _ak-forms-listform-purelist_isregular:

.. py:attribute:: ak.forms.ListForm.purelist_isregular



.. _ak-forms-listform-purelist_depth:

.. py:attribute:: ak.forms.ListForm.purelist_depth



.. _ak-forms-listform-is_identity_like:

.. py:attribute:: ak.forms.ListForm.is_identity_like



.. _ak-forms-listform-minmax_depth:

.. py:attribute:: ak.forms.ListForm.minmax_depth



.. _ak-forms-listform-branch_depth:

.. py:attribute:: ak.forms.ListForm.branch_depth



.. _ak-forms-listform-fields:

.. py:attribute:: ak.forms.ListForm.fields



.. _ak-forms-listform-is_tuple:

.. py:attribute:: ak.forms.ListForm.is_tuple



.. _ak-forms-listform-dimension_optiontype:

.. py:attribute:: ak.forms.ListForm.dimension_optiontype



.. _ak-forms-listform-_columns:

.. py:method:: ak.forms.ListForm._columns(self, path, output, list_indicator)



.. _ak-forms-listform-_prune_columns:

.. py:method:: ak.forms.ListForm._prune_columns(self, is_inside_record_or_union)



.. _ak-forms-listform-_select_columns:

.. py:method:: ak.forms.ListForm._select_columns(self, match_specifier)



.. _ak-forms-listform-_column_types:

.. py:method:: ak.forms.ListForm._column_types(self)

